syntax = "proto3";
package endorsement_decoder_response;

option go_package = "github.com/veraison/services/provisioning/decoder";

import "vts.proto";

message EndorsementDecoderResponse {
    repeated proto.Endorsement swComponents = 1;
    repeated proto.Endorsement trustAnchors = 2;
}
